# zero2prod

./: Cargo.toml  Makefile  README.md  configuration.yaml
api/src/: main.rs
scripts/: init_db.sh
src/: lib.rs  main.rs
tests/: health_check.rs
